# tuw_teleop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: teleop_gamepad.launch
src/: joy2cmd.cpp  joy2twist.cpp
tuw_gamepad/: CMakeLists.txt  package.xml
tuw_gamepad/cfg/: GamepadControl.cfg
tuw_gamepad/cfg/logitech_f510/: iwos_diffdrive.yml  iws_ackerman_tt02.yml  iws_diffdrive.yml  twist_diffdrive.yml
tuw_gamepad/cfg/logitech_f710/: iwos_diffdrive.yml  iws_ackermann.yaml  iws_tb.yml  twist.yaml  twist_diffdrive.yml
tuw_gamepad/include/tuw_gamepad/: gamepad.h
tuw_gamepad/launch/: gamepad_iws.launch  gamepad_twist.launch  iwos_diffdrive.launch  iws_ackerman_tt02.launch  iws_diffdrive.launch  iws_tb.launch  twist_car.launch  twist_diffdrive.launch
tuw_gamepad/src/: gamepad.cpp  gamepad2twist.cpp
tuw_gamepad_python/: CMakeLists.txt  README.md  package.xml  setup.py
tuw_gamepad_python/cfg/: gamepad_dynamic_config.cfg
tuw_gamepad_python/cfg/converter/: joints_iws_for_iwos_config.cfg  joy_to_twist_with_orientation_config.cfg  twist_with_orientation_for_iwos_config.cfg
tuw_gamepad_python/cfg/device/: 8BitDoPro2.yaml  LogitechF710.yaml
tuw_gamepad_python/launch/: gamepad.launch
tuw_gamepad_python/src/tuw_gamepad_python/: gamepad_node
tuw_gamepad_python/src/tuw_gamepad_python/converter/: abstract_converter.py
tuw_gamepad_python/src/tuw_gamepad_python/converter/implementation/: iwos_orientation_converter.py  joints_iws_for_iwos.py  joy_to_twist_with_orientation.py  pass_through_converter.py  twist_with_orientation_for_iwos.py
tuw_gamepad_python/src/tuw_gamepad_python/device/: index_constants.py  mapping.py  mapping_reader.py
tuw_gamepad_python/src/tuw_gamepad_python/utilities/: config_modifier.py
tuw_gui2iws/: CMakeLists.txt  README.md  package.xml
tuw_gui2iws/cfg/: tuw_gui2iws.cfg
tuw_gui2iws/include/tuw_gui2iws/: tuw_gui2iws.h  tuw_gui2iws_node.h
tuw_gui2iws/launch/: teleop_gui_iws.launch
tuw_gui2iws/src/: tuw_gui2iws.cpp  tuw_gui2iws_node.cpp
tuw_iws_to_twist/: CMakeLists.txt  iws_to_twist_nodelet.xml  package.xml
tuw_iws_to_twist/cfg/: IwsToTwist.cfg
tuw_iws_to_twist/include/tuw_iws_to_twist/: iws_to_twist_nodelet.h
tuw_iws_to_twist/launch/: iws_to_twist_node.launch
tuw_iws_to_twist/src/: iws_to_twist_node.cpp  iws_to_twist_nodelet.cpp
tuw_joy2twist/: CMakeLists.txt  package.xml
tuw_joy2twist/cfg/: logitech_f510.yml  logitech_f710.yml
tuw_joy2twist/launch/: teleop_gamepad.launch  teleop_joy2twist.launch
tuw_joy2twist/src/: joy2twist.cpp
tuw_keyboard/: CMakeLists.txt  LICENSE  README.md  package.xml
tuw_keyboard/cfg/: KeyboardControl.cfg
tuw_keyboard/include/tuw_keyboard/: tuw_keyboard.h  tuw_keyboard_node.h
tuw_keyboard/launch/: iws_diffdrive.launch  twist_diffdrive.launch
tuw_keyboard/src/: tuw_keyboard.cpp  tuw_keyboard_node.cpp
tuw_keyboard2twist/: CMakeLists.txt  README.md  package.xml
tuw_keyboard2twist/include/tuw_keyboard2twist/: tuw_keyboard2twist.h  tuw_keyboard2twist_defaults.h  tuw_keyboard2twist_node.h
tuw_keyboard2twist/launch/: teleop_keyboard_twist.launch
tuw_keyboard2twist/src/: tuw_keyboard2twist.cpp  tuw_keyboard2twist_node.cpp
tuw_patroling/: CMakeLists.txt  README.md  package.xml
tuw_patroling/cfg/: patroling.yaml
tuw_patroling/launch/: patroling.launch
tuw_patroling/scripts/: patroling.py
tuw_teleop/: CMakeLists.txt  package.xml
tuw_twist_to_iws/: CMakeLists.txt  package.xml  twist_to_iws_nodelet.xml
tuw_twist_to_iws/cfg/: TwistToIws.cfg
tuw_twist_to_iws/include/tuw_iws_to_twist/: twist_to_iws_nodelet.h
tuw_twist_to_iws/launch/: iws_to_twist_nodelet.launch  twist_to_iws_node.launch  twist_to_iws_nodelet.launch
tuw_twist_to_iws/src/: twist_to_iws_node.cpp  twist_to_iws_nodelet.cpp
