<?xml version="1.0"?>
<package>
  <name>tuw_keyboard</name>
  <version>0.0.0</version>
  <description>The tuw_keyboard package</description>

  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <author email="todorangrg@gmail.com">George Todoran</author>
  <author email="markus.bader@tuwien.ac.at">todorangrg</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tuw_nav_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tuw_nav_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
      
  </export>
</package>
